parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> stmt
Rule 1     stmt -> ID ASSIGN expr SEMI
Rule 2     stmt -> ID ASSIGN NUM SEMI
Rule 3     stmt -> LBRACE stmtlist RBRACE
Rule 4     stmt -> IF LPAREN expr RPAREN stmt
Rule 5     stmt -> WHILE LPAREN expr RPAREN stmt
Rule 6     stmtlist -> stmt
Rule 7     stmtlist -> stmtlist stmt
Rule 8     expr -> ID
Rule 9     expr -> NUM
Rule 10    expr -> expr OPTR expr

Terminals, with rules where they appear

ASSIGN               : 1 2
ID                   : 1 2 8
IF                   : 4
LBRACE               : 3
LPAREN               : 4 5
NUM                  : 2 9
OPTR                 : 10
RBRACE               : 3
RPAREN               : 4 5
SEMI                 : 1 2
WHILE                : 5
error                : 

Nonterminals, with rules where they appear

expr                 : 1 4 5 10 10
stmt                 : 4 5 6 7 0
stmtlist             : 3 7

Parsing method: LALR

state 0

    (0) S' -> . stmt
    (1) stmt -> . ID ASSIGN expr SEMI
    (2) stmt -> . ID ASSIGN NUM SEMI
    (3) stmt -> . LBRACE stmtlist RBRACE
    (4) stmt -> . IF LPAREN expr RPAREN stmt
    (5) stmt -> . WHILE LPAREN expr RPAREN stmt

    ID              shift and go to state 2
    LBRACE          shift and go to state 3
    IF              shift and go to state 4
    WHILE           shift and go to state 5

    stmt                           shift and go to state 1

state 1

    (0) S' -> stmt .



state 2

    (1) stmt -> ID . ASSIGN expr SEMI
    (2) stmt -> ID . ASSIGN NUM SEMI

    ASSIGN          shift and go to state 6


state 3

    (3) stmt -> LBRACE . stmtlist RBRACE
    (6) stmtlist -> . stmt
    (7) stmtlist -> . stmtlist stmt
    (1) stmt -> . ID ASSIGN expr SEMI
    (2) stmt -> . ID ASSIGN NUM SEMI
    (3) stmt -> . LBRACE stmtlist RBRACE
    (4) stmt -> . IF LPAREN expr RPAREN stmt
    (5) stmt -> . WHILE LPAREN expr RPAREN stmt

    ID              shift and go to state 2
    LBRACE          shift and go to state 3
    IF              shift and go to state 4
    WHILE           shift and go to state 5

    stmtlist                       shift and go to state 7
    stmt                           shift and go to state 8

state 4

    (4) stmt -> IF . LPAREN expr RPAREN stmt

    LPAREN          shift and go to state 9


state 5

    (5) stmt -> WHILE . LPAREN expr RPAREN stmt

    LPAREN          shift and go to state 10


state 6

    (1) stmt -> ID ASSIGN . expr SEMI
    (2) stmt -> ID ASSIGN . NUM SEMI
    (8) expr -> . ID
    (9) expr -> . NUM
    (10) expr -> . expr OPTR expr

    NUM             shift and go to state 13
    ID              shift and go to state 11

    expr                           shift and go to state 12

state 7

    (3) stmt -> LBRACE stmtlist . RBRACE
    (7) stmtlist -> stmtlist . stmt
    (1) stmt -> . ID ASSIGN expr SEMI
    (2) stmt -> . ID ASSIGN NUM SEMI
    (3) stmt -> . LBRACE stmtlist RBRACE
    (4) stmt -> . IF LPAREN expr RPAREN stmt
    (5) stmt -> . WHILE LPAREN expr RPAREN stmt

    RBRACE          shift and go to state 14
    ID              shift and go to state 2
    LBRACE          shift and go to state 3
    IF              shift and go to state 4
    WHILE           shift and go to state 5

    stmt                           shift and go to state 15

state 8

    (6) stmtlist -> stmt .

    RBRACE          reduce using rule 6 (stmtlist -> stmt .)
    ID              reduce using rule 6 (stmtlist -> stmt .)
    LBRACE          reduce using rule 6 (stmtlist -> stmt .)
    IF              reduce using rule 6 (stmtlist -> stmt .)
    WHILE           reduce using rule 6 (stmtlist -> stmt .)


state 9

    (4) stmt -> IF LPAREN . expr RPAREN stmt
    (8) expr -> . ID
    (9) expr -> . NUM
    (10) expr -> . expr OPTR expr

    ID              shift and go to state 11
    NUM             shift and go to state 17

    expr                           shift and go to state 16

state 10

    (5) stmt -> WHILE LPAREN . expr RPAREN stmt
    (8) expr -> . ID
    (9) expr -> . NUM
    (10) expr -> . expr OPTR expr

    ID              shift and go to state 11
    NUM             shift and go to state 17

    expr                           shift and go to state 18

state 11

    (8) expr -> ID .

    SEMI            reduce using rule 8 (expr -> ID .)
    OPTR            reduce using rule 8 (expr -> ID .)
    RPAREN          reduce using rule 8 (expr -> ID .)


state 12

    (1) stmt -> ID ASSIGN expr . SEMI
    (10) expr -> expr . OPTR expr

    SEMI            shift and go to state 19
    OPTR            shift and go to state 20


state 13

    (2) stmt -> ID ASSIGN NUM . SEMI
    (9) expr -> NUM .

  ! shift/reduce conflict for SEMI resolved as shift
    SEMI            shift and go to state 21
    OPTR            reduce using rule 9 (expr -> NUM .)

  ! SEMI            [ reduce using rule 9 (expr -> NUM .) ]


state 14

    (3) stmt -> LBRACE stmtlist RBRACE .

    $end            reduce using rule 3 (stmt -> LBRACE stmtlist RBRACE .)
    RBRACE          reduce using rule 3 (stmt -> LBRACE stmtlist RBRACE .)
    ID              reduce using rule 3 (stmt -> LBRACE stmtlist RBRACE .)
    LBRACE          reduce using rule 3 (stmt -> LBRACE stmtlist RBRACE .)
    IF              reduce using rule 3 (stmt -> LBRACE stmtlist RBRACE .)
    WHILE           reduce using rule 3 (stmt -> LBRACE stmtlist RBRACE .)


state 15

    (7) stmtlist -> stmtlist stmt .

    RBRACE          reduce using rule 7 (stmtlist -> stmtlist stmt .)
    ID              reduce using rule 7 (stmtlist -> stmtlist stmt .)
    LBRACE          reduce using rule 7 (stmtlist -> stmtlist stmt .)
    IF              reduce using rule 7 (stmtlist -> stmtlist stmt .)
    WHILE           reduce using rule 7 (stmtlist -> stmtlist stmt .)


state 16

    (4) stmt -> IF LPAREN expr . RPAREN stmt
    (10) expr -> expr . OPTR expr

    RPAREN          shift and go to state 22
    OPTR            shift and go to state 20


state 17

    (9) expr -> NUM .

    RPAREN          reduce using rule 9 (expr -> NUM .)
    OPTR            reduce using rule 9 (expr -> NUM .)
    SEMI            reduce using rule 9 (expr -> NUM .)


state 18

    (5) stmt -> WHILE LPAREN expr . RPAREN stmt
    (10) expr -> expr . OPTR expr

    RPAREN          shift and go to state 23
    OPTR            shift and go to state 20


state 19

    (1) stmt -> ID ASSIGN expr SEMI .

    $end            reduce using rule 1 (stmt -> ID ASSIGN expr SEMI .)
    RBRACE          reduce using rule 1 (stmt -> ID ASSIGN expr SEMI .)
    ID              reduce using rule 1 (stmt -> ID ASSIGN expr SEMI .)
    LBRACE          reduce using rule 1 (stmt -> ID ASSIGN expr SEMI .)
    IF              reduce using rule 1 (stmt -> ID ASSIGN expr SEMI .)
    WHILE           reduce using rule 1 (stmt -> ID ASSIGN expr SEMI .)


state 20

    (10) expr -> expr OPTR . expr
    (8) expr -> . ID
    (9) expr -> . NUM
    (10) expr -> . expr OPTR expr

    ID              shift and go to state 11
    NUM             shift and go to state 17

    expr                           shift and go to state 24

state 21

    (2) stmt -> ID ASSIGN NUM SEMI .

    $end            reduce using rule 2 (stmt -> ID ASSIGN NUM SEMI .)
    RBRACE          reduce using rule 2 (stmt -> ID ASSIGN NUM SEMI .)
    ID              reduce using rule 2 (stmt -> ID ASSIGN NUM SEMI .)
    LBRACE          reduce using rule 2 (stmt -> ID ASSIGN NUM SEMI .)
    IF              reduce using rule 2 (stmt -> ID ASSIGN NUM SEMI .)
    WHILE           reduce using rule 2 (stmt -> ID ASSIGN NUM SEMI .)


state 22

    (4) stmt -> IF LPAREN expr RPAREN . stmt
    (1) stmt -> . ID ASSIGN expr SEMI
    (2) stmt -> . ID ASSIGN NUM SEMI
    (3) stmt -> . LBRACE stmtlist RBRACE
    (4) stmt -> . IF LPAREN expr RPAREN stmt
    (5) stmt -> . WHILE LPAREN expr RPAREN stmt

    ID              shift and go to state 2
    LBRACE          shift and go to state 3
    IF              shift and go to state 4
    WHILE           shift and go to state 5

    stmt                           shift and go to state 25

state 23

    (5) stmt -> WHILE LPAREN expr RPAREN . stmt
    (1) stmt -> . ID ASSIGN expr SEMI
    (2) stmt -> . ID ASSIGN NUM SEMI
    (3) stmt -> . LBRACE stmtlist RBRACE
    (4) stmt -> . IF LPAREN expr RPAREN stmt
    (5) stmt -> . WHILE LPAREN expr RPAREN stmt

    ID              shift and go to state 2
    LBRACE          shift and go to state 3
    IF              shift and go to state 4
    WHILE           shift and go to state 5

    stmt                           shift and go to state 26

state 24

    (10) expr -> expr OPTR expr .
    (10) expr -> expr . OPTR expr

  ! shift/reduce conflict for OPTR resolved as shift
    SEMI            reduce using rule 10 (expr -> expr OPTR expr .)
    RPAREN          reduce using rule 10 (expr -> expr OPTR expr .)
    OPTR            shift and go to state 20

  ! OPTR            [ reduce using rule 10 (expr -> expr OPTR expr .) ]


state 25

    (4) stmt -> IF LPAREN expr RPAREN stmt .

    $end            reduce using rule 4 (stmt -> IF LPAREN expr RPAREN stmt .)
    RBRACE          reduce using rule 4 (stmt -> IF LPAREN expr RPAREN stmt .)
    ID              reduce using rule 4 (stmt -> IF LPAREN expr RPAREN stmt .)
    LBRACE          reduce using rule 4 (stmt -> IF LPAREN expr RPAREN stmt .)
    IF              reduce using rule 4 (stmt -> IF LPAREN expr RPAREN stmt .)
    WHILE           reduce using rule 4 (stmt -> IF LPAREN expr RPAREN stmt .)


state 26

    (5) stmt -> WHILE LPAREN expr RPAREN stmt .

    $end            reduce using rule 5 (stmt -> WHILE LPAREN expr RPAREN stmt .)
    RBRACE          reduce using rule 5 (stmt -> WHILE LPAREN expr RPAREN stmt .)
    ID              reduce using rule 5 (stmt -> WHILE LPAREN expr RPAREN stmt .)
    LBRACE          reduce using rule 5 (stmt -> WHILE LPAREN expr RPAREN stmt .)
    IF              reduce using rule 5 (stmt -> WHILE LPAREN expr RPAREN stmt .)
    WHILE           reduce using rule 5 (stmt -> WHILE LPAREN expr RPAREN stmt .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for SEMI in state 13 resolved as shift
WARNING: shift/reduce conflict for OPTR in state 24 resolved as shift
